# stm32-ui

./: .gitignore  .gitmodules  Makefile.in  README.md  configure  configure.ac  demos.gpr.in  make-gallery-pics.sh  ui_stm32fxxx.gpr.in
demos/clock/: clock-display-instances.ads  clock-display.adb  clock-display.ads  clock-main.adb  clock.ads
demos/gallery/: gallery-display-instances.ads  gallery-display.adb  gallery-display.ads  gallery-main.adb  gallery-picture1.ads  gallery-picture2.ads  gallery-picture3.ads  gallery-picture4.ads  gallery-picture5.ads  gallery-picture6.ads  gallery-picture7.ads  gallery-picture8.ads  gallery-picture9.ads  gallery.ads
demos/graphs/: graphs-display-instances.ads  graphs-display.adb  graphs-display.ads  graphs-main.adb  graphs.ads
src/: cosin_table.ads  ui-buttons.adb  ui-buttons.ads  ui-clocks.adb  ui-clocks.ads  ui-displays.adb  ui-displays.ads  ui-graphs.adb  ui-graphs.ads  ui-images-decoding_gif.adb  ui-images-decoding_gif.ads  ui-images.adb  ui-images.ads  ui-texts.adb  ui-texts.ads
tools/: tools.gpr
tools/src/: cosin.adb  gif2ada.adb
tools/src/gid/: gid-decoding_gif.adb  gid-decoding_gif.ads  gid.adb  gid.ads
